--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -203,6 +203,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Speak - Common -->
     <string name="stop">Stop</string>
     <string name="pause">Pause</string>
+    <string name="rewind">Rewind</string>
+    <string name="forward">Forward</string>
     <string name="tts_lang_not_available">Language is not available.</string>
     <string name="speak_queue">Queue</string>
     <string name="speak_repeat">Repeat</string>
