--- a/AndBible/res/values-ko/strings.xml
+++ b/AndBible/res/values-ko/strings.xml
@@ -2,26 +2,25 @@
 <resources>
   <string name="app_name">And 성경</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\"하나님이 빛이 있으라 하시매 빛이 있었고\"창세기 1장 3절</string>
-  <string name="help_text">실행을 위해 메뉴 키를 사용.\n손으로 D-패드를 움직이거나 마우스를 사용하여 이전 또는 다음 장으로 이동</string>
-  <string name="help_text_long">실행을 위한 메뉴 키 사용\n문서를 다운로드하려면 다음 또는 이전 챕터로 이동합니다.\n성경보기를 열고 메뉴 / 기타 / 다운로드 문서를 누르십시오.\n현재구절에 영향을 미치는 작업은 내용 메뉴. 문서 선택에서 문서를 삭제하거나 정보를 공유할 수 있읍니다.\n스피치\n스피치를 누르면 대화창을 시작하거나 중단 합니다. \n북마크 관리자는 메인 메뉴를 통해 액세스할 수 있습니다. 북마크 관리자 컨텍스트 메뉴 즐겨찾기 꼬리표를 사용하여 그룹화 할 수 있습니다.</string>
+  <string name="splash_top_text">\"하나님이 빛이 있으라 하시매 빛이 있었고\" 창세기 1장 3절</string>
+  <string name="help_text">실행을 위해 메뉴 키를 사용.\n손으로 D-패드를 움직이거나 손가락을 사용하여 \n이전 또는 다음 장으로 이동</string>
+  <string name="help_text_long">*실행을 위한 메뉴 키 사용\n1. 문서를 다운로드하려면 다음 또는 이전 챕터로 이동합니다.\n2. 성경보기를 열고 메뉴 / 기타 / 다운로드 문서를 누르십시오.\n3. 현재구절에 영향을 미치는 작업은 내용 메뉴. \n   문서 선택에서 문서를 삭제하거나 정보를 공유할 수 있읍니다.\n**말하기\n말하기를 누르면 대화창을 시작하거나 중단 합니다. \n북마크 관리자는 메인 메뉴를 통해 액세스할 수 있습니다. 북마크 관리자 컨텍스트 메뉴 즐겨찾기 꼬리표를 사용하여 그룹화 할 수 있습니다.</string>
   <string name="version_text">버전의 %s</string>
-  <string name="no_sdcard_error">다시 삽입 SD 카드 및 시작하고 성경을 알려드립니다.</string>
+  <string name="no_sdcard_error">SD 카드를 재삽입 한 뒤, 앱을 다시 시작합니다.</string>
   <!--main menu-->
   <string name="chooseBook">문서</string>
-  <string name="selectPassage">통로</string>
+  <string name="selectPassage">목록</string>
   <string name="search">찾기</string>
   <string name="settings">설정</string>
-  <string name="history">역사</string>
+  <string name="history">내가 본 페이지</string>
   <string name="speak">말하기</string>
   <string name="help">도움말</string>
   <!--Passage navigation-->
-  <string name="choosePassageBookName">도서 선택</string>
+  <string name="choosePassageBookName">번역본 선택</string>
   <string name="choosePassageChapterName">장 선택</string>
   <string name="choosePassageVerseName">구절 선택</string>
   <!--Search-->
   <string name="search_index">검색 색인</string>
-  <string name="index_creation_required">색인 검색을해야합니다. 인덱스는 인터넷에서 다운로드할 수 있습니다 또는 로컬로 만들었습니다. 다운로드가 훨씬 빠르고 다운로드 인덱스보다 검색 기능이 있습니다. 인터넷 연결이 인덱스를 다운로드해야합니다.</string>
   <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
   <string name="index">색인</string>
   <string name="index_download">다운로드</string>
@@ -29,37 +28,37 @@
   <string name="index_create">만들기</string>
   <!--Tasks-->
   <string name="progress_status">진행</string>
-  <string name="task_kill_warning">그들이 완료하기 전에 다른 응용 프로그램으로 전환할 경우에는 이러한 오래 실행되는 작업을 종료할 수 있습니다.</string>
-  <string name="no_tasks_running">아무 작업이 현재 실행중인 없습니다.</string>
+  <string name="task_kill_warning">And성경을 마치지 않고 다른 어플리케이션을 지속 실행할 경우, 종료될 수 있습니다.</string>
+  <string name="no_tasks_running">현재 실행 중인 작업이 없습니다.</string>
   <!--Search-->
   <string name="search_results">결과 찾기</string>
-  <string name="search_words_group_prompt">찾기 구절</string>
+  <string name="search_words_group_prompt">구절 찾기</string>
   <string name="search_all_words">모든 단어</string>
   <string name="search_any_word">단어별 말씀</string>
   <string name="search_phrase">구문</string>
   <string name="search_result_count">%d 개의 검색된</string>
   <string name="search_showing_first">너무 많습니다 일치합니다. %d 조 첫번째 보기</string>
   <string name="search_bible_section_group_prompt">검색은 어디</string>
-  <string name="search_all_bible">성경 전체를</string>
-  <string name="search_new_testament">신약 성서</string>
-  <string name="search_old_testament">구약 성서</string>
+  <string name="search_all_bible">성경 전체</string>
+  <string name="search_new_testament">신약 성경</string>
+  <string name="search_old_testament">구약 성경</string>
   <string name="search_current_book">현재 도서</string>
   <string name="error_executing_search">잘못된 검색어</string>
   <!--Preferences-->
   <string name="prefs_show_verseno_title">구절 번호</string>
-  <string name="prefs_show_verseno_summary">보기 구절 번호</string>
+  <string name="prefs_show_verseno_summary">구절 번호 보기</string>
   <string name="prefs_verse_per_line_title">한 줄에 한 구절</string>
-  <string name="prefs_verse_per_line_summary">다른 라인에있는 각 구절보기</string>
-  <string name="prefs_show_bookmarks_title">아이콘 즐겨찾기 표시</string>
+  <string name="prefs_verse_per_line_summary">다른 줄에있는 각 구절보기</string>
+  <string name="prefs_show_bookmarks_title">즐겨찾기 아이콘 보기</string>
   <string name="prefs_show_bookmarks_summary"> 즐겨찾기 구절에 아이콘 표시</string>
   <string name="prefs_show_mynotes_title">내 노트 아이콘 표시</string>
   <string name="prefs_show_mynotes_summary">내 참고 구절에 아이콘 표시</string>
   <string name="prefs_show_notes_title">각주와 상호 참조</string>
   <string name="prefs_show_notes_summary">표시 각주와 상호 참조</string>
   <string name="prefs_show_strongs_title">보기 스트롱 번호</string>
-  <string name="prefs_show_strongs_summary">링크 그리스어 및 히브리어 정의</string>
+  <string name="prefs_show_strongs_summary">링크 - 그리스어 및 히브리어 정의</string>
   <string name="prefs_show_morphology_title">형태학의 코드</string>
-  <string name="prefs_show_morphology_summary">보기 \"Robinson\'s Greek Morphology\"</string>
+  <string name="prefs_show_morphology_summary">\"Robinson\'s Greek Morphology\" 보기</string>
   <string name="prefs_section_title_title">섹션 제목</string>
   <string name="prefs_section_title_summary">비정규 섹션 제목보기</string>
   <string name="prefs_red_letter_title">레드 레터</string>
@@ -68,26 +67,26 @@
   <string name="prefs_tilt_to_scroll_summary">스크롤 아래로 기우리기</string>
   <string name="prefs_night_mode_title">야간 모드</string>
   <string name="prefs_night_mode_summary">어둠 속에서 쉽게 읽기</string>
-  <string name="prefs_night_mode_automatic">자동의</string>
+  <string name="prefs_night_mode_automatic">자동</string>
   <string name="prefs_navigate_to_verse_title">구절 선택할 때</string>
   <string name="prefs_navigate_to_verse_summary">구절 선택할 때</string>
   <string name="prefs_text_size_title">텍스트 크기</string>
   <string name="prefs_text_size_summary">자세한 내용을 참조하거나 더 명확하게보기</string>
   <string name="prefs_text_size_sample_text">샘플 텍스트</string>
-  <string name="prefs_interface_locale_title">응용 프로그램 언어</string>
-  <string name="prefs_interface_locale_summary">선택하고 사용자 지정 사용자 인터페이스 언어</string>
-  <string name="locale_change_warning">응용 프로그램이 새로운 인터페이스 언어로 전환할 다시 시작됩니다</string>
+  <string name="prefs_interface_locale_title">어플리케이션 언어</string>
+  <string name="prefs_interface_locale_summary">사용자 인터페이스 언어 설정</string>
+  <string name="locale_change_warning">인터페이스 언어 전환을 위해 어플리케이션을 재시작합니다</string>
   <!--Notes screen-->
-  <string name="no_chapter_notes">아니 참고이 장에서 존재</string>
-  <string name="no_verse_notes">아니 참고이 구절에 존재</string>
+  <string name="no_chapter_notes">이 장에 저장된 노트가 없습니다</string>
+  <string name="no_verse_notes">이 절에 저장된 노트가 없습니다.</string>
   <string name="previous">이전</string>
   <string name="next">다음</string>
   <!--Strongs-->
   <string name="strongs">스트롱 사전</string>
-  <string name="strongs_not_installed">다운로드 스트롱 히브리어 및 그리스어 사전을하시기 바랍니다</string>
+  <string name="strongs_not_installed">스트롱 히브리어 및 그리어스어 사전을 다운로드 하세요</string>
   <string name="all_greek_occurrences">모든 사건보기</string>
   <string name="all_hebrew_occurrences">모든 사건보기</string>
-  <string name="no_indexed_bible_with_strongs_ref">당신의 강한 숫자를 포함하는 성경을 다운로드해야하고 검색을 통해 색인을 다운로드</string>
+  <string name="no_indexed_bible_with_strongs_ref">스트롱 넘버가 포함된 성경과, 검색을 통해 그 인덱스를 다운로드 해야합니다.</string>
   <string name="morph_robinson_not_installed">\'Robinson\'s Morphological Analysis Codes\'사전을 다운로드하십시오</string>
   <string name="strongs_toggle_button_on">nnnn</string>
   <string name="strongs_toggle_button_off">nnnn</string>
@@ -100,11 +99,11 @@
   <string name="download_refresh_book_list_menu_item">새로고침</string>
   <string name="error_downloading">다운로드 오류가 발생했습니다. 인터넷 연결을 확인하시기 바랍니다.</string>
   <string name="no_internet_connection">인터넷에 연결할 수 없습니다</string>
-  <string name="storage_space_warning">부족 로컬 저장 공간.</string>
-  <string name="wait_for_bible">다운로드를 완료 성경 기다려주십시오. 그렇다면 당신은 메인 화면으로 이동합니다.</string>
-  <string name="wait_for_bible_not_yet">잠시 기다려주세요. 성경은 아직 설치를 완료하지 않았습니다.</string>
-  <string name="download_complete_no_bibles">대한 성서가 설치되지 않았습니다. 백을 누른 후 다시 시도하시기 바랍니다.</string>
-  <string name="too_many_jobs">너무 많은 작업을 실행. 일부는 완료하고 다시 시도 기다려주십시오.</string>
+  <string name="storage_space_warning">저장 공간 부족</string>
+  <string name="wait_for_bible">성경 다운로드가 완료될 때까지 기다려 주십시오. </string>
+  <string name="wait_for_bible_not_yet">설치가 완료될 때 까지 기다려주십시오.</string>
+  <string name="download_complete_no_bibles">성경이 설치되지 않았습니다. 다시 시도 하십시오</string>
+  <string name="too_many_jobs">너무 많은 작업이 실행되고 있습니다. </string>
   <string name="document_not_installed">다운로드 \'%s\' 을하세요</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">읽기 계획</string>
@@ -114,14 +113,14 @@
   <string name="done">완료</string>
   <string name="reset">재설정</string>
   <string name="rdg_plan_y1ntpspr">신약, 시편, 그리고 잠언 일년에 읽기</string>
-  <string name="rdg_plan_y1ot1nt1_chronological">일년에 성경 날짜순으로 읽기</string>
-  <string name="rdg_plan_y1ot1nt1_OTandNT">OT 및 NT - 성경을 일년에 읽기</string>
-  <string name="rdg_plan_y1ot1nt1_OTthenNT">OT 먼저 그리고 NT - 성경을 일년에 읽기</string>
-  <string name="rdg_plan_y1ot1nt2_mcheyne">성경을 일년에 읽기 (M\'Cheyne)</string>
+  <string name="rdg_plan_y1ot1nt1_chronological">일년에 성경 연대기순으로 읽기</string>
+  <string name="rdg_plan_y1ot1nt1_OTandNT">성경전체 일년통독 - 구약,신약 동시에</string>
+  <string name="rdg_plan_y1ot1nt1_OTthenNT">성경전체 일년통독 - 구약부터 순서대로</string>
+  <string name="rdg_plan_y1ot1nt2_mcheyne">성경전체 일년통독 - M\'Cheyne</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">삭제</string>
-  <string name="delete_index">검색 색인을 삭제합니다</string>
+  <string name="delete_index">검색 색인을 삭제</string>
   <string name="about">소개</string>
   <string name="delete_doc">%s 을 (를) 삭제하시겠습니까?</string>
   <string name="delete_search_index_doc">%s 의 색인을 삭제하시겠습니까?</string>
@@ -164,7 +163,7 @@
   <string name="one_page">%d 개의 페이지</string>
   <string name="some_pages">%d 개의 페이지들</string>
   <!--Speak - Common-->
-  <string name="stop">그만</string>
+  <string name="stop">말하기 정지</string>
   <string name="tts_lang_not_available">언어는 사용할 수 없습니다.</string>
   <string name="speak_queue">대기열</string>
   <string name="speak_repeat">반복</string>
@@ -202,7 +201,7 @@
   <!--Errors-->
   <string name="error_occurred">오류가 발생했습니다</string>
   <string name="error_no_content">선택된 구절에 대한 내용 없음</string>
-  <string name="error_page_too_large">페이지로드가 너무 큽니다</string>
+  <string name="error_page_too_large">페이지가 커서 불러올 수 없습니다.</string>
   <string name="error_key_not_in_document">문서에서 찾을 수 없음</string>
   <string name="empty_list">표시할 항목이 없습니다</string>
 </resources>
