--- a/AndBible/res/values-lv/strings.xml
+++ b/AndBible/res/values-lv/strings.xml
@@ -32,6 +32,7 @@
   <string name="task_kill_warning">Ilglaicīgie uzdevumi var tik pārtraukti, ja pārslēgsieties uz citu programmu, pirms tie ir pabeigti.</string>
   <string name="no_tasks_running">Neviens uzdevums šobrīd netiek pildīts.</string>
   <!--Search-->
+  <string name="search_results">meklēt rezultātus</string>
   <string name="search_words_group_prompt">Atrast pantus</string>
   <string name="search_all_words">Visi vārdi</string>
   <string name="search_any_word">Jebkuru vārdu</string>
@@ -49,18 +50,32 @@
   <string name="prefs_show_verseno_summary">Rādīt pantu numerāciju</string>
   <string name="prefs_verse_per_line_title">Katrā rindā viens pants</string>
   <string name="prefs_verse_per_line_summary">Rādīt katru pantu savā rindā</string>
+  <string name="prefs_show_bookmarks_title">Rādīt grāmatzīmju ikonas</string>
+  <string name="prefs_show_bookmarks_summary">rādīt ikonu pantiem ar grāmatzīmi</string>
+  <string name="prefs_show_mynotes_title">Rādīt Manu Piezīmju Ikonu</string>
+  <string name="prefs_show_mynotes_summary">Rādīt Ikonu Pantiem ar Manu Piezīmi</string>
   <string name="prefs_show_notes_title">Piezīmes</string>
   <string name="prefs_show_notes_summary">Rādīt piezīmes</string>
   <string name="prefs_show_strongs_title">Rādīt Strong\'s numerāciju</string>
   <string name="prefs_show_strongs_summary">Saites uz Grieķu &amp; Ebreju definīcijām</string>
   <string name="prefs_show_morphology_title">Morfoloģiskie kodi</string>
   <string name="prefs_show_morphology_summary">Rādīt Robinson\'s Grieķu morfoloģiju</string>
+  <string name="prefs_section_title_title">Sekcijas nosaukums</string>
+  <string name="prefs_section_title_summary">Rādīt nekanonisko sekciju nosaukumus</string>
+  <string name="prefs_red_letter_title">Lasīt Vēstuli</string>
+  <string name="prefs_red_letter_summary">Rādīt Jēzus vārdus sarkanā krāsā</string>
+  <string name="prefs_tilt_to_scroll_title">Noliekt lai ritinātu</string>
+  <string name="prefs_tilt_to_scroll_summary">Noliekt ierīci lai ritinātu lapu uz leju</string>
   <string name="prefs_night_mode_title">Nakts režīms</string>
   <string name="prefs_night_mode_summary">Lai vieglāk lasīt tumsā</string>
+  <string name="prefs_night_mode_automatic">Automātiski</string>
   <string name="prefs_navigate_to_verse_title">Doties uz pantu</string>
+  <string name="prefs_navigate_to_verse_summary">Izvēlēties pantu (un nodaļu) kad atver rakstu vietu</string>
   <string name="prefs_text_size_title">Teksta izmērs</string>
   <string name="prefs_text_size_summary">Skatīt vairāk vai redzēt skaidrāk</string>
+  <string name="prefs_text_size_sample_text">Parauga teksts</string>
   <string name="prefs_interface_locale_title">Programmas valoda</string>
+  <string name="prefs_interface_locale_summary">Izvēlieties pielāgotu lietotāja interfeisa valodu</string>
   <string name="locale_change_warning">Programma tiks pārstartēta, lai pārslēgtos uz jauno interfeisa valodu</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Šajā nodaļā nav piezīmju</string>
@@ -82,6 +97,7 @@
   <string name="download_source_message">Dokumenti ir lejuplādēti no\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
   <string name="download_document_confirm_prefix">Lejuplādēt</string>
   <string name="download_refreshing_book_list">Atsvaidzināt sarakstu ar pieejamajiem dokumentiem?</string>
+  <string name="download_refresh_book_list_menu_item">Atjaunot</string>
   <string name="error_downloading">Kļūda lejupielādējot. Lūdzu, pārbaudiet savu interneta pieslēgumu.</string>
   <string name="no_internet_connection">Nevarēja izveidot savienojumu ar internetu</string>
   <string name="storage_space_warning">Nepietiekama diska vieta.</string>
@@ -89,7 +105,19 @@
   <string name="wait_for_bible_not_yet">Lūdzu uzgaidiet. Bībeles uzstādīšana vēl nav pabeigta.</string>
   <string name="download_complete_no_bibles">Neviena Bībele nav instalēta. Lūdzu nospiediet atpakaļ\nUn mēģiniet vēlreiz.</string>
   <string name="too_many_jobs">Pārāk daudz aktīvu uzdevumu. Lūdzu uzgaidiet kamēr daži tiek izpildīti un mēģiniet vēlreiz.</string>
+  <string name="document_not_installed">Lūdzu lejuplādējiet \'%\'.</string>
   <!--Daily Reading Plan-->
+  <string name="rdg_plan_title">Lāsīšanas plāns</string>
+  <string name="rdg_plan_selector_title">Izvēlies lasīšanas plānu</string>
+  <string name="rdg_plan_day">%. Diena</string>
+  <string name="rdg_plan_set_start_jan1">Sākt ar 1. janvāri</string>
+  <string name="done">Pabeigts</string>
+  <string name="reset">Salikt no jauna</string>
+  <string name="rdg_plan_y1ntpspr">Jaunā Derība, Psalmi un Salamana Pamācības gada laikā</string>
+  <string name="rdg_plan_y1ot1nt1_chronological">Bībele hronoloģiski gada laikā</string>
+  <string name="rdg_plan_y1ot1nt1_OTandNT">Bībele gada laikā - VD un JD</string>
+  <string name="rdg_plan_y1ot1nt1_OTthenNT">Bībele gada laikā vispirms VD tad JD</string>
+  <string name="rdg_plan_y1ot1nt2_mcheyne">Bībele gada laikā (M Čeinijs)</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Dzēst</string>
@@ -98,10 +126,13 @@
   <string name="delete_doc">Dzēst %s?</string>
   <string name="delete_search_index_doc">Dzēst %s indeksu?</string>
   <!--Verse context menu-->
+  <string name="select_text">iezīmēt tekstu</string>
+  <string name="select_text_help">Vilkt lēnām lai atzīmētu. ⏎ Tad pieskarties atzīmētajam lai nokopētu.</string>
   <string name="notes">Zemsvītras piezīmes un atsauces</string>
   <string name="copy">Kopēt šo pantu</string>
   <string name="share_verse">Dalīties ar šo pantu ...</string>
   <string name="share_verse_subject">Šo Bībeles pants Jums nosūtīts izmantojot And Bible</string>
+  <string name="compare_translations">Salīdzināt tulkojumus</string>
   <!--Bookmarks-->
   <string name="bookmarks">Grāmatzīmes</string>
   <string name="add_bookmark">Pievienot grāmatzīmi</string>
@@ -111,6 +142,7 @@
   <string name="assign_labels">Pievienot atzīmes</string>
   <string name="new_label">Jauna Atzīme</string>
   <string name="new_label_prompt">Nosaukums</string>
+  <string name="label_unlabelled">Nenosaukts</string>
   <!--Dictionary-->
   <string name="dictionary">Vārdnīca</string>
   <string name="search_dictionary_hint">Meklēt vārdnīcā</string>
@@ -134,19 +166,34 @@
   <!--Speak - Common-->
   <string name="stop">Apturēt</string>
   <string name="tts_lang_not_available">Valoda nav pieejama.</string>
+  <string name="speak_queue">Rinda</string>
+  <string name="speak_repeat">Atkārtot</string>
   <!--User Notes-->
+  <string name="mynotes">Manas piezīmes</string>
+  <string name="mynote">Mana Piezīme</string>
+  <string name="mynote_add">Pievienot Manu Piezīmi</string>
+  <string name="mynote_view_edit">Mana Piezīme</string>
+  <string name="mynote_saved">Mana Piezīme saglabāta</string>
   <!--Backup and restore-->
+  <string name="backup">Dublēt</string>
+  <string name="backup_success">Manas Piezīmes un grāmatzīmes saglabātas %s uz SD karters</string>
+  <string name="restore">Atjaunot</string>
+  <string name="restore_confirmation">Pārrakstīt Manas Piezīmes un Grāmatzīmes?</string>
+  <string name="restore_success">Manas Piezīmes un Grāmatzīmes atjaunotas no %s SD kartes</string>
   <!--Document types-->
   <string name="doc_type_bible">Bībele</string>
   <string name="doc_type_commentary">Komentāri</string>
   <string name="doc_type_dictionary">Vārdnīca</string>
   <string name="doc_type_book">Grāmata</string>
+  <string name="doc_type_map">Karte</string>
   <!--Languages-->
   <string name="lang_default">Noklusēts</string>
   <!--General-->
   <string name="okay">Labi</string>
   <string name="cancel">Atcelt</string>
+  <string name="yes">Jā</string>
   <string name="no">Nē</string>
+  <string name="save">Saglabāt</string>
   <string name="error">Kļūda</string>
   <string name="more">Vairāk</string>
   <string name="retry">Mēģināt vēlreiz</string>
@@ -154,4 +201,8 @@
   <string name="all">Viss</string>
   <!--Errors-->
   <string name="error_occurred">Kļūda</string>
+  <string name="error_no_content">Izvēlētajam pantam nav papildus satura</string>
+  <string name="error_page_too_large">Lapa ir par lielu lai to ielādētu</string>
+  <string name="error_key_not_in_document">Dokumentā nav atrasts</string>
+  <string name="empty_list">Nav parādāmu vienumu</string>
 </resources>
