Capitalize Bible; re-iterate Download documents method

--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -11,18 +11,18 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="app_name">And Bible</string>
     <!-- Startup & Help -->
     <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
-    <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
+    <string name="help_text">Press the MENU button for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
     <string name="help_text_long"><b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger
     \nDouble-tap toggles Fullscreen on/off.
     \n\n<b>Menu</b>
-    \nPress the MENU key for actions
+    \nPress the MENU button for actions
     \n\nTo download more documents press Menu/More/Download Documents
     \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading
     \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu.  The list of existing notes can be accessed via the main menu.
     \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.
     \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see "Apache Lucene - Query Parser Syntax" for more details)
     \n\n<b>Context Menus</b>
-    \nLong press on the bible view to open the context menu for actions affecting the current verse.
+    \nLong press on the Bible view to open the context menu for actions affecting the current verse.
     \nLong press on a document in the document selector to delete it or view information.
     \nLong press the Back button to access the History list
     </string>
@@ -66,7 +66,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="search_result_count">%d matches found</string>
     <string name="search_showing_first">Too many matches.  Showing first %d</string>
     <string name="search_bible_section_group_prompt">Search Where</string>
-    <string name="search_all_bible">Whole bible</string>
+    <string name="search_all_bible">Whole Bible</string>
     <string name="search_new_testament">New Testament</string>
     <string name="search_old_testament">Old Testament</string>
     <string name="search_current_book">Current book</string>
@@ -116,14 +116,14 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="strongs_not_installed">Please download Strong\'s Hebrew and Greek dictionaries</string>
     <string name="all_greek_occurrences">Find all occurrences</string>
     <string name="all_hebrew_occurrences">Find all occurrences</string>
-    <string name="no_indexed_bible_with_strongs_ref">You must download a bible containing Strong\'s numbers and download its index via Search</string>
+    <string name="no_indexed_bible_with_strongs_ref">You must download a Bible containing Strong\'s numbers and download its index via Search</string>
     <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
 
     <!-- Module download -->
     <string name="download">Download Documents</string>
-    <string name="download_confirmation">Download a bible from the internet?</string>
+    <string name="download_confirmation">Download a Bible from the internet?</string>
     <string name="download_source_message">Documents are downloaded from\nhttp://www.crosswire.org\n&amp; http://xiphos.org</string>
     <string name="download_document_confirm_prefix">Download</string>
     <string name="download_refreshing_book_list">Refreshing list of available documents</string>
@@ -131,7 +131,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="error_downloading">An error occurred downloading.  Please check your internet connection.</string>
     <string name="no_internet_connection">Could not connect to the internet</string>
     <string name="storage_space_warning">Insufficient local storage space.</string>
-    <string name="wait_for_bible">Please wait for the bible to finish downloading.  You will then be taken to the main screen.</string>
+    <string name="wait_for_bible">Please wait for the Bible to finish downloading.  You will then be taken to the main screen.\n\nDownload more documents later by navigating to Menu button/More/Download documents.</string>
     <string name="wait_for_bible_not_yet">Please wait.  A bible has not yet completed installation.</string>
     <string name="download_complete_no_bibles">No bible was installed.  Please press Back and try again.</string>
     <string name="too_many_jobs">Too many tasks executing.  Please wait for some to finish and try again.</string>
